--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.5.1
+  flutter_staggered_grid_view: ^0.7.0
   go_router: ^14.2.7
 
 dev_dependencies:
