--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter_riverpod: ^2.5.1
   flutter_staggered_grid_view: ^0.7.0
   go_router: ^14.2.7
+  widget_zoom: ^0.0.4
 
 dev_dependencies:
   flutter_lints: ^3.0.0
