--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,9 +21,16 @@ dev_dependencies:
   flutter_lints: ^3.0.0
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: "^0.13.1"
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/back-card.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+  
 
 flutter:
-
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
   assets:
