--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <uses-permission android:name="android.permission.INTERNET" /> 
     <application
-        android:label="yu_gi_oh_app"
+        android:label="Yu-Gi-Oh App"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
         <activity
