--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dev_dependencies:
     sdk: flutter
   flutter_launcher_icons: "^0.13.1"
   package_rename_plus: ^1.0.1
+  change_app_package_name: ^1.3.0
 
 # Config to change the app icon
 flutter_launcher_icons:
